# dirac-cwl-proto

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  pyproject.toml  setup.cfg
.github/workflows/: generate-schemas.yml  main.yml
docs/: SCHEMA_GENERATION.md
scripts/: generate_schemas.py
src/dirac_cwl_proto/: __init__.py  metadata_models.py  submission_models.py  utils.py
src/dirac_cwl_proto/cli/: __init__.py  job.py  metadata_models.py  production.py  utils.py
src/dirac_cwl_proto/commands/: __init__.py  base.py  core.py  download_config.py  groupOutputs.py  group_outputs.py  jobTypes.py  job_types.py
src/dirac_cwl_proto/commands/generic/: __init__.py  jobTypes.py
src/dirac_cwl_proto/core/: __init__.py  exceptions.py  utility.py
src/dirac_cwl_proto/data_management_mocks/: data_manager.py  file_catalog.py  sandbox.py
src/dirac_cwl_proto/execution_hooks/: __init__.py  core.py  registry.py  requirement_validator.py  utils.py  validator.py
src/dirac_cwl_proto/execution_hooks/DataManagement/: DataManager.py  FileCatalog.py  Sandbox.py  data_manager.py  file_catalog.py
src/dirac_cwl_proto/execution_hooks/data_management/: data_manager.py  file_catalog.py
src/dirac_cwl_proto/execution_hooks/plugins/: __init__.py  core.py  gaussian.py  lhcb.py  mandelbrot.py  pi.py
src/dirac_cwl_proto/executor/: __init__.py  __main__.py  executor.py  fs_access.py  pathmapper.py
src/dirac_cwl_proto/job/: JobWrapper.py  __init__.py  job_wrapper.py  job_wrapper_template.py  json_catalog.py  replica_catalog.py  submission_clients.py
src/dirac_cwl_proto/lhcb/: __init__.py  generate_replica_catalog.py  run_lbprodrun.py
src/dirac_cwl_proto/lhcb/prod_request_to_cwl/: __init__.py  __main__.py  anaprod.py  common.py  converter.py  simulation.py
src/dirac_cwl_proto/metadata/: __init__.py  core.py  registry.py
src/dirac_cwl_proto/metadata/plugins/: __init__.py  core.py  gaussian.py  lhcb.py  mandelbrot.py  pi.py
src/dirac_cwl_proto/modules/: calculate_macobac.py  crypto.py  gaussian_check.py  gaussian_fit.py  lhcb_app.py  pi_gather.py  pi_simulate.py  pi_simulate_v2.py  process.py  processing.py  random_data_gen.py  resolve_input_data_query.py  sim.py  simulate.py
src/dirac_cwl_proto/production/: __init__.py
src/dirac_cwl_proto/schemas/: __init__.py  dirac-metadata.yaml  transformation_meta.yaml
src/dirac_cwl_proto/transformation/: __init__.py
test/: job.py  test_execution_hooks_core.py  test_execution_hooks_registry.py  test_integration.py  test_job_submission_clients.py  test_metadata_core.py  test_metadata_plugins_core.py  test_metadata_plugins_lhcb.py  test_metadata_registry.py  test_plugins_core.py  test_plugins_lhcb.py  test_submission_models.py  test_workflows.py
test/schemas/: dirac-metadata.json  plugins-summary.json
test/workflows/: README.md
test/workflows/bad_references/: reference_circular1.cwl  reference_circular2.cwl  reference_doesnotexists.cwl  reference_itself.cwl
test/workflows/benchmark/benchmark_complete/: description.cwl
test/workflows/benchmark/data-generation/: data-generation.cwl
test/workflows/crypto/: caesar.cwl  description.cwl
test/workflows/crypto/crypto_base64/: base64.cwl
test/workflows/crypto/crypto_caesar/: caesar.cwl
test/workflows/crypto/crypto_complete/: description.cwl
test/workflows/crypto/crypto_md5/: md5.cwl
test/workflows/crypto/crypto_rot13/: rot13.cwl
test/workflows/gaussian_fit/: main-workflow.cwl
test/workflows/gaussian_fit/data-generation/: data-generation.cwl
test/workflows/gaussian_fit/data_generation/: data-generation-workflow.cwl  data-generation.cwl
test/workflows/gaussian_fit/gaussian_fit/: gaussian-fit-workflow.cwl  gaussian-fit.cwl  gaussian_fit.cwl
test/workflows/helloworld/: description_with_inputs.cwl
test/workflows/helloworld_with_inputs/: inputs2.yaml  inputs3.yaml
test/workflows/lhcb/: ProductionRequestToCWL.py  description.cwl  generate_test.py  generated_test.cwl  lhcbreconstruct.cwl  lhcbsimulate.cwl
test/workflows/macobac_workflow/: inputs.yml
test/workflows/malformed_description/: description_malformed_class.cwl  description_malformed_command.cwl
test/workflows/mandelbrot/: description.cwl  image-merge.cwl  image-prod.cwl  malformed-nonexisting-type_description.cwl  malformed-wrong-stepname_description.cwl
test/workflows/merge/: description.cwl  pisimulate_v2.cwl
test/workflows/parallel/: description.cwl  image-merge.cwl  image-prod.cwl  parallel.cwl  sequential.cwl
test/workflows/pi/: description.cwl  pigather.cwl  pisimulate.cwl
test/workflows/pi/pi_complete/: description.cwl
test/workflows/resource_requirements/: bad_merge_production.cwl
test/workflows/schemas/: plugins-summary.json
test/workflows/test_meta/: override_dirac_hints.yaml  override_dirac_hints_twice.yaml  override_output_path.yaml  test_meta.cwl
test/workflows/test_outputs/: override_output.yaml  override_output2.yaml  test_outputs.cwl  test_outputs_sandbox.cwl
workflows/: example1.cwl  example1.simulation.cwl  example2.cwl
workflows/generic_workflow/: description.cwl
workflows/helloworld_workflow/: description.cwl
workflows/lhcb_workflow/: description.cwl
workflows/lhcb_workflow_v1/: description.cwl  inputs.yaml  jobDescription.xml
workflows/lhcb_workflow_v2/: description.cwl  inputs.yaml  jobDescription.xml
workflows/macobac_workflow/: calculate_macobac.yaml  description.cwl
workflows/mandelbrot_workflow/: description.cwl  inputs.yml
workflows/mc_workflow/: description.cwl  jobDescription.xml
workflows/split_steps/: processing.cwl  simulation.cwl
workflows/subworkflows/: processing.cwl  simulation.cwl
workflows/workflow1/: example1.cwl  metadata.json
workflows/workflow1/input_sandbox/: simulation_config.json
workflows/workflow1/subworkflows/: processing.cwl  simulation.cwl
workflows/workflow_v1/: example1.cwl  metadata.json
workflows/workflow_v1/input_sandbox/: simulation_config.json
workflows/workflow_v2/: example2.cwl
workflows/workflow_v2/subworkflows/: processing.cwl  simulate.cwl
workflows/workflow_v3/: example3.cwl
(+119 files in other folders)
