[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac_cwl_proto"
version = "0.1.0"
description = "Prototype of CWL used as a production/job workflow language"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name="DIRAC consortium" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "cwl-utils",
    "cwlformat",
    "cwltool",
    "lbprodrun",
    "mypy",
    "pydantic",
    "pyyaml",
    "typer",
    "referencing",
    "rich",
    "ruamel.yaml"
]

[project.optional-dependencies]
testing = ["pytest>=6"]

[project.scripts]
dirac-cwl = "dirac_cwl_proto:app"
pi-simulate = "dirac_cwl_proto.modules.pi_simulate:app"
pi-simulate-v2 = "dirac_cwl_proto.modules.pi_simulate_v2:app"
pi-gather = "dirac_cwl_proto.modules.pi_gather:app"
crypto = "dirac_cwl_proto.modules.crypto:app"
lhcb-app = "dirac_cwl_proto.modules.lhcb_app:app"
random-data-gen = "dirac_cwl_proto.modules.random_data_gen:app"
gaussian-fit = "dirac_cwl_proto.modules.gaussian_fit:app"

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "B", "I", "PLE"]
ignore = ["B905", "B008", "B006"]
line-length = 120
src = ["src", "tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["^tests/", "^build/"]
allow_redefinition = true
enable_error_code = ["import", "attr-defined"]

[tool.pytest.ini_options]
addopts = ["-v"]
asyncio_mode = "auto"
