[metadata]
name = dirac_cwl_proto
author = DIRAC consortium
description = Prototype of CWL used as a production/job workflow language
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/aldbr/dirac-cwl-proto
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    typer
    rich
    pyyaml
    cwltool
    mypy

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest >= 6

[options.entry_points]
console_scripts =
    dirac = dirac_cwl_proto.cli:app

